unpackaged/main/default/objects/SLCA2__CA_Groups__c/SLCA2__CA_Groups__c.object-meta.xml
<CustomObject>
    <description>setting for Calendars groups</description>
    <label>CA_Groups</label>
    <nameField>
        <label>CA_Groups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_GroupsPlural</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>