unpackaged/main/default/objects/SLCA2__CA_Groups__c/fields/SLCA2__calendars__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__calendars__c</fullName>
    <label>calendars</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>