unpackaged/main/default/objects/SLCA2__CA_Groups__c/fields/SLCA2__color__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__color__c</fullName>
    <defaultValue>'rgb(200,100,0)'</defaultValue>
    <label>color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>