unpackaged/main/default/objects/SLCA2__CA_Groups__c/fields/SLCA2__friendlyName__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__friendlyName__c</fullName>
    <label>friendlyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>