unpackaged/main/default/objects/SLCA2__CA_Groups__c/fields/SLCA2__includingCalendarsListLabel__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__includingCalendarsListLabel__c</fullName>
    <label>calendarsListLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>