unpackaged/main/default/objects/SLCA2__CA_Groups__c/validationRules/SLCA2__emptyGroupName.validationRule-meta.xml
<ValidationRule>
    <fullName>SLCA2__emptyGroupName</fullName>
    <active>true</active>
    <errorConditionFormula>Name  = ''</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Group Name is required</errorMessage>
</ValidationRule>